# Grad_Ped_Predict

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  MIGRATION.md  README.md  REBUILD_SCHEMATIC.md  pyproject.toml  setup.md
.github/workflows/: ci.yml
OLD/Undergrad_thesis_project/: .gitignore  CLAUDE.md  README.md  ablation_usage_example.py  class_imbalance_strategies.py  config.py  extract_frames.py  final_ablation_verification.py  imbalance_config.py  main.py  requirements.txt  test.py  test_ablation_models.py  test_ablation_structure_clean.py  test_imbalance_setup.py  train.py  train_two_phase.py  visualize_comparison.py  visualize_gt.py
OLD/golden/: README.md  (+3 more)
configs/: augment.yaml  balance.yaml  data.yaml  eval.yaml  export.yaml  infer.yaml  model.yaml  paths.yaml  schedule.yaml  train.yaml
docs/: HOLE_AUDIT.md  PHASE_B_BACKLOG.md  PROPOSAL.md  RESEARCH_PLAN.md  V2_REBUILD_RUNBOOK.md
scripts/: augment_dataset.py  balance_dataset.py  build_lmdb.py  build_lmdb_incremental.py  count_labels.py  evaluate.py  export_onnx.py  infer_video.py  make_sequences.py  report_distribution.py  split_sets.sh  train.py  visualize.py
tests/: _golden.py  conftest.py  test_augment.py  test_balance.py  test_benchmark.py  test_callbacks.py  test_chunk_loader.py  test_config.py  test_data_shapes.py  test_distribution.py  test_eval.py  test_golden_outputs.py  test_incremental.py  test_inference.py  test_lmdb_dataset.py  test_lmdb_roundtrip.py  test_logging.py  test_losses.py  test_metrics.py  test_model_shapes.py  test_onnx_export.py  test_qualitative_viz.py  test_sampler.py  test_schedule.py  test_smoke.py  test_stats.py  test_train_script.py  test_trainer.py  test_transforms.py  test_utils.py  test_viz_plots.py
(+103 files in other folders)
